--- a/web_ui/src/pages/Home/components/Sidebar/components/SidebarMenu.module.less
+++ b/web_ui/src/pages/Home/components/Sidebar/components/SidebarMenu.module.less
@@ -43,17 +43,17 @@
   line-height: 44px !important;
   padding-left: 16px !important;
   padding-right: 16px !important;
-  
+
   &:hover {
-    background-color: var(--bg-color-hover, rgba(24, 144, 255, 0.1)) !important;
+    background-color: var(--bg-color-hover) !important;
   }
-  
+
   &.ant-menu-item-selected {
-    background-color: var(--primary-color, #1890ff) !important;
-    color: white !important;
-    
+    background-color: var(--primary-color) !important;
+    color: var(--text-color-inverse) !important;
+
     .ant-menu-item-icon {
-      color: white !important;
+      color: var(--text-color-inverse) !important;
     }
   }
 }
