--- a/web_ui/src/pages/Instant/components/Send/style.module.less
+++ b/web_ui/src/pages/Instant/components/Send/style.module.less
@@ -6,7 +6,6 @@
 .sendWrap {
   width: 100%;
   position: relative;
-  box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.05);
 
 }
 :global(.ant-input) {
