--- a/web_ui/src/pages/Instant/index.module.less
+++ b/web_ui/src/pages/Instant/index.module.less
@@ -142,7 +142,7 @@
 
 .toggleText {
   font-size: 12px;
-  color: rgba(0, 0, 0, 1);
+  color: var(--text-color-7);
   margin-left: 4px;
 }
 
@@ -163,7 +163,7 @@
   right: 16px;
   z-index: 10;
   cursor: pointer;
-  border: 1px solid rgba(0, 0, 0, 0.2);
+  border: 1px solid var(--border-color-dark);
   border-radius: 8px;
   display: flex;
   align-items: center;
@@ -175,7 +175,7 @@
   }
   .openDrawerText{
     font-size: 12px;
-    color: rgba(0, 0, 0, 1);
+    color: var(--text-color-7);
     margin-left: 4px;
   }
 }
@@ -185,7 +185,7 @@
 }
 :global(.ant-drawer-content-wrapper){
   box-shadow: none !important;
-  border-left: 1px solid rgba(0, 0, 0, 0.1);
+  border-left: 1px solid var(--border-color);
 }
 :global(.ant-drawer-body){
   overflow: hidden !important;
